Fixes #1 Added z-index to the jeditable form elements.

--- a/devkit/dynamic_sheets/fate_core/0.1/sheet.scss
+++ b/devkit/dynamic_sheets/fate_core/0.1/sheet.scss
@@ -11,6 +11,17 @@
 
 }
 .ds_fate_core {
+  form.jeditable_input {
+    z-index: 1;
+    input {
+      z-index: 1;
+    }
+    button {
+      z-index: 1;
+      position:relative;
+    }
+  }
+
   .activator {
     display: none;
   }
@@ -259,7 +270,7 @@
         top: -23px;
         font-size: 2em;
         font-weight: bold;
-        z-index:1;
+        z-index: 1;
       }
       span.title {
         display: block;
